<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/stock_name"/>
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            />
        <TextView
            android:id="@+id/tv_company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/stock_company_name"/>
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            />
        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/stock_price"/>
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            />
        <TextView
            android:id="@+id/tv_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/stock_change"/>
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            />
        <TextView
            android:id="@+id/tv_change_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/stock_change_percent"/>
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            />
        <TextView
            android:id="@+id/tv_market_cap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/stock_market_cap"/>
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp"/>

</LinearLayout>